# Bottles_data_collector

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  generate_stats.py  pyproject.toml  upload_to_hf.py
src/: app.py  collector.py  io_utils.py  ui.py
src/collector/: app.py  collector.py  config.py  export.py  io_utils.py  web_ui.py
states/: can.yaml  foreign.yaml  pet.yaml  states_can.json  states_non_target.json  states_pet.json
tags/: can.yaml  foreign.yaml  pet.yaml
